--- a/src/app/pages/monitors/monitors.page.scss
+++ b/src/app/pages/monitors/monitors.page.scss
@@ -16,5 +16,21 @@ ion-spinner {
   margin: auto;
 }
 
+ion-footer {
+  ion-toolbar {
+    --background: var(--ion-color-content-dark);
+  }
+}
+
+ion-segment-button {
+  --background: transparent;
+  --background-activated: var(--ion-color-toolbar);
+  --background-checked: var(--ion-color-toolbar);
+  --border-radius: 0;
+  --border-style: none;
+  --color: var(--ion-color-light);
+  padding: 5px;
+}
+
 
 
