--- a/src/app/pages/monitors/monitors.page.scss
+++ b/src/app/pages/monitors/monitors.page.scss
@@ -2,6 +2,7 @@ ion-list {
   --background: var(--ion-color-content-light);
   border: 1px solid var(--ion-color-border);
   padding: 0;
+  margin: 0;
 }
 
 ion-item {
