--- a/src/app/pages/login/forgot-password/forgot-password.page.html
+++ b/src/app/pages/login/forgot-password/forgot-password.page.html
@@ -9,21 +9,18 @@
 <ion-content padding [scrollY]="false">
   <div class="forgot-pwd">
     <img src="../../../../assets/img/adminlabs-logo-white.svg" class="form-logo" alt="Logo">
-    <form (ngSubmit)=resetPwd() #pwdResetForm="ngForm">
+    <form #pwdResetForm="ngForm" (ngSubmit)=resetPwd(pwdResetForm)>
       <ion-list>
         <div class="form-group">
           <ion-item>
             <ion-icon name="mail" color="medium"></ion-icon>
-            <ion-input type="email" class="form-control" id="email" required [(ngModel)]="email" name="email" placeholder="Email"></ion-input>
+            <ion-input ngModel type="email" class="form-control" id="email" required name="email" placeholder="Email"></ion-input>
           </ion-item>
         </div>
         <div class="form-group">
           <ion-button type="submit">
-            <div *ngIf="!formLoading">
+            <div *ngIf="!formSubmitted; else loading">
               <p>Send reset link</p>
-            </div>
-            <div *ngIf="formLoading">
-              <ion-spinner></ion-spinner>
             </div>
           </ion-button>
         </div>
@@ -34,3 +31,7 @@
     </form>
   </div>
 </ion-content>
+
+<ng-template #loading>
+  <ion-spinner></ion-spinner>
+</ng-template>
