--- a/src/app/pages/settings/settings.page.html
+++ b/src/app/pages/settings/settings.page.html
@@ -14,20 +14,23 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-    <div *ngIf="isContentLoaded && loadingError" class="loading-error">
-      <div padding class="loading-error-content">
-        <img src="../../assets/img/adminlabs-data-not-found-001.svg" alt="Data not found">
-        <h2>No data available!</h2>
-        <p>Lean back and relax. We're cooking up some data at the moment and will get back to you shortly.</p>
+<ion-content [scrollY]="canScroll">
+
+  <div *ngIf="loadingError" class="loading-error">
+    <div padding class="loading-error-content">
+      <img src="./assets/img/adminlabs-data-not-found-003.svg" alt="Loading error">
+      <h2>No data available.</h2>
+      <p>Check your network connection.</p>
+    </div>
+  </div>
+
+    <ng-template #loading>
+      <div class="loading-spinner">
+        <ion-spinner></ion-spinner>
       </div>
-    </div>
+    </ng-template>
 
-    <div *ngIf="!isContentLoaded && !loadingError" class="loading-spinner">
-      <ion-spinner></ion-spinner>
-    </div>
-
-    <div *ngIf="isContentLoaded && !loadingError">
+    <div *ngIf="user; else loading">
       <ion-list lines="full">
         <ion-item-divider>Notification configuration</ion-item-divider>
         <ion-item>
