Change monitors page bottom segment stylings

--- a/src/app/components/popover/monitor-filter/monitor-filter.component.html
+++ b/src/app/components/popover/monitor-filter/monitor-filter.component.html
@@ -24,7 +24,7 @@
   </ion-list-header>
   <ion-item lines="none">
     <ion-range min="21" max="500" pin="true" color="success" [ngModel]="monitorFilter.stepSelection"
-               (ionBlur)="stepsChanged($event)">
+               (touchend)="stepsChanged($event)">
       <ion-label slot="start">21</ion-label>
       <ion-label slot="end">500</ion-label>
     </ion-range>
