--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,15 +29,47 @@
               </ion-label>
             </ion-item>
           </div>
-          <ion-menu-toggle auto-hide="false" *ngFor="let page of appPages">
+
+          <div *ngFor="let p of appPages">
+
+            <ion-item id="p.id" (click)="p.open = !p.open" detail="false">
+              <ion-icon slot="start" [name]="p.icon" color="light"></ion-icon>
+              <ion-icon *ngIf="!p.open" slot="end" name="arrow-forward" color="light"></ion-icon>
+              <ion-icon *ngIf="p.open" slot="end" name="arrow-down" color="light"></ion-icon>
+              <ion-label>
+                {{ p.title }}
+              </ion-label>
+            </ion-item>
+
+            <div *ngIf="p.children && p.open">
+              <ion-menu-toggle auto-hide="false" *ngFor="let c of p.children">
+                  <ion-item  [routerDirection]="'root'" [routerLink]="c.url"
+                             detail="true" class="sub-menu" [class.active-page]="checkActive(c.id)" (click)="setActive(c.id)">
+                    <ion-label>
+                      {{ c.title }}
+                    </ion-label>
+                  </ion-item>
+              </ion-menu-toggle>
+            </div>
+
+          </div>
+
+
+
+<!--          <ion-menu-toggle auto-hide="false" *ngFor="let page of appPages">
             <ion-item [routerDirection]="'root'" [routerLink]="[page.url]" [class.active-page]="checkActive(page.id)" (click)="setActive(page.id)">
               <ion-icon slot="start" [name]="page.icon" color="light"></ion-icon>
               <ion-label>
                 {{ page.title }}
               </ion-label>
             </ion-item>
-          </ion-menu-toggle>
+          </ion-menu-toggle>-->
 
+        </ion-list>
+      </ion-content>
+
+      <ion-footer>
+        <ion-list lines="none">
           <ion-item (click)="authService.logoutConfirm()" button="true" detail="true">
             <ion-icon slot="start" name="log-out" color="light"></ion-icon>
             <ion-label>
@@ -45,7 +77,7 @@
             </ion-label>
           </ion-item>
         </ion-list>
-      </ion-content>
+      </ion-footer>
 
     </ion-menu>
     <ion-router-outlet main [swipeGesture]="false"></ion-router-outlet>
