--- a/src/app/pages/website-monitoring/maintenances/maintenances.page.scss
+++ b/src/app/pages/website-monitoring/maintenances/maintenances.page.scss
@@ -1,8 +1,12 @@
 ion-list {
   --background: var(--ion-color-content-light);
-  width: 100%;
   border: 1px solid var(--ion-color-border);
   padding: 0;
+  margin: 0;
+}
+
+ion-list.maintained-monitors {
+  margin-top: 10px;
 }
 
 ion-item {
@@ -11,3 +15,11 @@ ion-item {
   --border-color: var(--ion-color-border);
   --detail-icon-color: var(--ion-color-dark);
 }
+
+ion-icon {
+  padding-right: 10px;
+}
+
+
+
+
